--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,20 @@
 <!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+<!--            <systemPath>${project.basedir}/lib/junit-4.13.jar</systemPath>-->
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+<!--            <systemPath>${project.basedir}/lib/hamcrest-all-1.3.jar</systemPath>-->
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.13.1</version>
